[gd_scene load_steps=9 format=3 uid="uid://bvvxoc2p05u7p"]

[ext_resource type="Script" path="res://WeaponScenes/StarBomb/boom.gd" id="1_slnld"]
[ext_resource type="Texture2D" uid="uid://10srtwhhpn6p" path="res://WeaponScenes/StarBomb/assets/Bubble 1.png" id="2_0yclm"]
[ext_resource type="Texture2D" uid="uid://b7vnlmuc8oom1" path="res://WeaponScenes/StarBomb/assets/Bubble 2.png" id="3_wisaj"]
[ext_resource type="Texture2D" uid="uid://d24shtyi5h0sg" path="res://WeaponScenes/StarBomb/assets/Bubble 3.png" id="4_soheg"]
[ext_resource type="Texture2D" uid="uid://dp6bn0gkuwco" path="res://WeaponScenes/StarBomb/assets/Bubble 4.png" id="5_m2njk"]
[ext_resource type="Texture2D" uid="uid://c18lda63u0orp" path="res://WeaponScenes/StarBomb/assets/Bubble 5.png" id="6_ng330"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cn0id"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0yclm")
}, {
"duration": 1.0,
"texture": ExtResource("3_wisaj")
}, {
"duration": 1.0,
"texture": ExtResource("4_soheg")
}, {
"duration": 1.0,
"texture": ExtResource("5_m2njk")
}, {
"duration": 1.0,
"texture": ExtResource("6_ng330")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vxlhs"]

[node name="StarExplode" type="Area2D"]
script = ExtResource("1_slnld")

[node name="explode" type="AnimatedSprite2D" parent="." groups=["Enemy"]]
modulate = Color(1, 1, 1, 0.172549)
scale = Vector2(7.86149, 7.86149)
sprite_frames = SubResource("SpriteFrames_cn0id")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(6.54354, 6.54354)
shape = SubResource("CircleShape2D_vxlhs")

[node name="flames" type="Timer" parent="."]
wait_time = 1.75
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="flames" to="." method="_on_flames_timeout"]
